<resources>
    <string name="app_name">Nutrient</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up!</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign In</string>
    <string name="settings">Settings</string>
    <string name="summary">Summary</string>
    <string name="add_entry">Add Entry</string>
    <string name="account_question">Need an account? </string>
    <string name="add_to_list">Add to My List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_to_list">Remove From My List</string>
</resources>